# wasmer-graphql-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  fixtures.json  pyproject.toml
src/: manage.py
src/api/: models.py  schema.py  views.py
src/api/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
